[gd_scene load_steps=7 format=2]

[ext_resource path="res://juego/Interfaz/ContenedorVidas.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/Interfaz/ContenedorLlaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/Interfaz/ContenedorMonedasPlata.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/Interfaz/ContenedorMonedasOro.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/Interfaz/ContenedorMonedasBronze.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/Interfaz/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
margin_top = 32.9768
margin_right = 40.0
margin_bottom = 72.9768
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContenedorVidas" parent="." instance=ExtResource( 1 )]
margin_top = 2.82843
margin_bottom = 45.8284

[node name="ContenedorLlaves" parent="." instance=ExtResource( 2 )]
margin_top = 57.9205
margin_bottom = 100.921

[node name="ContenedorMonedasOro" parent="." instance=ExtResource( 4 )]
margin_left = 1185.88
margin_top = -21.4455
margin_right = 1265.88
margin_bottom = 2.55453

[node name="ContenedorMonedasPlata" parent="." instance=ExtResource( 3 )]
margin_left = 1185.88
margin_top = 40.3933
margin_right = 1265.88
margin_bottom = 64.3933

[node name="ContenedorMonedasBronze" parent="." instance=ExtResource( 5 )]
margin_left = 1185.88
margin_top = 9.47391
margin_right = 1265.88
margin_bottom = 33.4739
